# quench

./: .gitignore  LICENSE  README.md  README_pypi.md  ROADMAP.md  System_Overview.md  pyproject.toml
core/: __init__.py  constraints.py  engine_pt.py  history.py  result.py  scorer.py  solver.py  state.py
examples/: group_rotation.py  timetable.py
examples/pharmacy/: old_schedule.csv  pharmacy_schedule.py  prompt.txt
quench/: __init__.py  engine_sa.py  neighbor.py
tests/: test_constraints_scorer.py  test_edge_cases.py  test_engines_solver.py  test_history.py  test_neighbor.py  test_state.py
