[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quench"
version = "0.1.1"
description = "Constraint-based arrangement engine for group rotation, timetabling, and any scheduling problem with rules."
readme = "README_pypi.md"
license = "MIT"
requires-python = ">=3.7"
keywords = ["scheduling", "constraint", "optimization", "rotation", "timetable"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quench*"]
